topbar collapse button toggle fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,20 +9,14 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 200px;
+  width: 230px;
   height: 100%;
   z-index: 999;
-  font-size: 24px;
 }
 
 .sidebar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 200px;
-  height: 100%;
-  z-index: 999;
   font-size: 24px;
+  height: 100%;
 }
 
 .main-container {
@@ -32,7 +26,7 @@
 @media (min-width: 992px) {
   .main-container {
     position: fixed;
-    left: 200px;
+    left: 230px;
     top: 0;
   }
 }
